@@ -1,0 +1,42 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Map srs="+proj=tmerc +lat_0=49 +lon_0=-2 +k=0.9996012717 +x_0=400000 +y_0=-100000 +ellps=airy +units=m +no_defs" bgcolor="rgba(0,0,0,0)">
+    <Style name="poly20090929162130952_style">
+
+        <Rule>
+            <Filter>([EAS_ID]!=158)</Filter>
+            <PolygonSymbolizer>
+                <CssParameter name="fill">blue</CssParameter>
+            </PolygonSymbolizer>
+            <LineSymbolizer>
+                <CssParameter name="stroke">blue</CssParameter>
+                <CssParameter name="stroke-width">4</CssParameter>
+            </LineSymbolizer>
+        </Rule>
+
+        <Rule>
+            <Filter>([EAS_ID]&lt;&gt;158)</Filter>
+            <PolygonSymbolizer>
+                <CssParameter name="fill">green</CssParameter>
+            </PolygonSymbolizer>
+            <LineSymbolizer>
+                <CssParameter name="stroke">green</CssParameter>
+                <CssParameter name="stroke-width">2</CssParameter>
+            </LineSymbolizer>
+        </Rule>
+        
+        <Rule>
+            <ElseFilter />
+            <PolygonSymbolizer>
+                <CssParameter name="fill">red</CssParameter>
+            </PolygonSymbolizer>
+        </Rule>
+
+    </Style>
+    <Layer name="poly20090929162130952" srs="+proj=tmerc +lat_0=49 +lon_0=-2 +k=0.9996012717 +x_0=400000 +y_0=-100000 +ellps=airy +units=m +no_defs" status="1" clear_label_cache="1" queryable="1">
+        <StyleName>poly20090929162130952_style</StyleName>
+        <Datasource>
+            <Parameter name="file">../../data/shp/poly.shp</Parameter>
+            <Parameter name="type">shape</Parameter>
+        </Datasource>
+    </Layer>
+</Map>
